# filetree-mac

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  agent.md  build.sh  capture_launches.sh  checksums.txt  install.sh  pure_tree_demo.swift  run_tests.sh  test_scanner.swift
Formula/: filetree.rb
TreeSize/Resources/: Info.plist
TreeSize/Sources/: Scanner.swift  TreeSizeApp.swift
docs/: README.md  architecture.md  changelog.md  development.md  features.md  modules.md  security.md
examples/: merge_bench.rs  scan_bench.rs
src/: app.rs  app_logic.rs  charts.rs  delete.rs  export.rs  fda.rs  lib.rs  macos_dir.rs  main.rs  menu.rs  models.rs  paths.rs  platform.rs  progress.rs  progress_ui.rs  scan_bridge.rs  scan_cache.rs  scan_progress.rs  scan_traverse.rs  scanner.rs  session.rs  theme.rs  tree_state.rs  util.rs
src/ui/: input.rs  mod.rs  modal.rs  render.rs  views.rs
tests/: app_logic_test.rs  cli_test.rs  export_test.rs  fda_test.rs  models_test.rs  paths_test.rs  platform_test.rs  progress_test.rs  scan_bridge_test.rs  scanner_test.rs  tree_state_test.rs
