[package]
name = "filetree"
version = "0.3.0"
edition = "2021"
description = "TreeSize-style disk usage analyzer for macOS"
license = "MIT"
readme = "README.md"

[[bin]]
name = "filetree-mac"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
nix = { version = "0.29", features = ["user", "fs"] }
libc = "0.2"
unicode-width = "0.2"
rayon = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true